# pymovement-playground

./: README.md  pyproject.toml
src/: eyetracker.py  gaze.py  main.py  one_euro_filter.py  track.py  window_manager.py
src/pymovement_playground/: __init__.py
